--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-
+    notion==0.0.28
 
 [options.packages.find]
 where = src
