refactor: fixes and typos

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = ronald-farias@outlook.com
 license = MIT
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/Ronald-TR/todo.sh-notion
 
 project_urls =
     Documentation = https://pyscaffold.org/
@@ -53,8 +53,8 @@ norecursedirs =
     .tox
 testpaths = tests
 
-[bdist_wheel]
-universal = 1
+# [bdist_wheel]
+# universal = 1
 
 [devpi:upload]
 no_vcs = 1
