--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,9 @@ envlist = default
 [testenv]
 description = invoke pytest to run automated tests
 isolated_build = True
+deps =
+    pytest
+    pytest-cov
 setenv =
     TOXINIDIR = {toxinidir}
 passenv =
