--- a/docs/Makefile
+++ b/docs/Makefile
@@ -23,6 +23,8 @@ help:
 clean:
 	rm -rf $(BUILDDIR)/* $(AUTODOCDIR)
 
+serve:
+	python -m http.server --directory _build/html
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
